<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:onClick="start"
        android:text="@string/startButton" />

    <EditText
        android:id="@+id/noOfQuestionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="43dp"
        android:layout_toRightOf="@+id/start"
        android:ems="10"
        android:text="@string/defaultNoOfQuestion"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/noOfQuestionEditText"
        android:layout_alignBottom="@+id/noOfQuestionEditText"
        android:layout_alignRight="@+id/start"
        android:layout_marginRight="15dp"
        android:text="@string/number_of_question_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/maximumEditText"
        android:layout_alignBottom="@+id/maximumEditText"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/maximum_of_operand_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/minimumEditText"
        android:layout_alignBottom="@+id/minimumEditText"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/minimum_of_operand_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/minimumEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/noOfQuestionEditText"
        android:layout_below="@+id/noOfQuestionEditText"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:text="@string/minimin_operand_text"
        android:inputType="number" />

    <EditText
        android:id="@+id/maximumEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/minimumEditText"
        android:layout_below="@+id/minimumEditText"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:text="@string/maximum_operand"
        android:inputType="number" />

</RelativeLayout>